k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: 471112954554.dkr.ecr.us-east-1.amazonaws.com/application:end 
          ports:
            - containerPort: 3000
